# doin-optimizer

./: README.md  pyproject.toml
src/doin_optimizer/: __init__.py  cli.py  runner.py
tests/: test_runner.py
